--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "^3.4.8",
     "multer": "^1.1.0"
   },
