--- a/package.json
+++ b/package.json
@@ -23,9 +23,21 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
-    "express": "^3.4.8",
-    "multer": "^1.1.0"
+    "braintree": "^1.34.0",
+    "cookie-parser": "^1.3.5",
+    "ejs": "^2.3.4",
+    "express": "~3.4.4",
+    "express-session": "^1.11.3",
+    "htmlencode": "0.0.4",
+    "mongoose": "^4.2.3",
+    "multer": "^1.0.6",
+    "ng-dialog": "^0.5.5",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
