Trying to get openshift to work

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
-  "main": "server.js"
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  }
 }
