--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
   },
   "dependencies": {
     "body-parser": "^1.14.1",
-    "express": "^3.4.8",
+    "cookie-parser": "^1.4.1",
+    "express": "^3.21.2",
+    "express-session": "^1.13.0",
+    "http": "0.0.0",
     "mongoose": "^4.4.12",
     "multer": "^1.0.6",
     "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "q": "^1.4.1"
   },
   "devDependencies": {},
